# quarkdrive-webdav-rust

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bug修复经验.md  deploy_and_test.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.serena/: project.yml
docs/: API.md  DEPLOYMENT.md  PERFORMANCE.md  api.md  architecture.md  deployment.md  development.md  index.md  install.md  performance.md  security.md  troubleshooting.md
docs/archive/: architecture-legacy.md  audit-fix-2026-07-07.md  rust-migration.md
helper/Resources/: com.localquark.webdav-helper.plist
helper/Sources/LocalQuarkHelper/: Authorization.swift  HelperDelegate.swift  XPCInterface.swift
legacy/LocalQuark-python-bundle/LocalQuark/app/certs/: cert.pem  key.pem
legacy/LocalQuark-python-bundle/LocalQuark/app/quark_cookie/: config.py  reader.py
legacy/LocalQuark-python-bundle/LocalQuark/app/scripts/: install_agent.sh  uninstall.sh
legacy/LocalQuark-python-bundle/LocalQuark/helper/: Package.swift
legacy/LocalQuark-python-bundle/LocalQuark/helper/Sources/LocalQuarkHelper/: HelperImpl.swift  Version.swift  main.swift
legacy/localquark-app/src-tauri/: Cargo.toml  tauri.conf.json
legacy/quarkdrive-webdav-basic/src/: cache.rs  lib.rs  vfs.rs
legacy/quarkdrive-webdav-basic/src/drive/: mod.rs
quarkdrive-webdav/: .gitignore  AGENTS.md  Cargo.toml  README.md
quarkdrive-webdav/docker/: Dockerfile
quarkdrive-webdav/src/: admin.rs  cache.rs  cookie.rs  health.rs  lib.rs  main.rs  notifier.rs  proxy.rs  tray.rs  vfs.rs  webdav.rs
quarkdrive-webdav/src/drive/: mod.rs  model.rs
scripts/: build-app.sh  build_deploy_test.sh  install_watchdog.sh  restart_app.sh  watchdog_mount.sh
scripts/_pending/: cargo-check-20260703-2200.sh  cargo-check-20260703-2230.sh  list-models-31415-20260703-000000.sh  show-claude-env-20260703.sh
src/: cache.rs  health.rs  lib.rs  main.rs  mount.rs  proxy.rs  vfs.rs  webdav.rs
src/drive/: mod.rs
