[package]
name = "quarkdrive-webdav"
version = "1.5.0"
homepage = "https://github.com/hawkyin-hub/quarkdrive-webdav-rust"
repository = "https://github.com/hawkyin-hub/quarkdrive-webdav-rust"
authors = ["hawkyin-hub maintainers"]
description = "WebDAV adapter that mounts Quark Drive (夸克网盘) to macOS Finder as a native volume."
keywords = ["webdav", "quark", "quarkdrive", "macos", "fuse", "mount", "pan", "cloud-storage", "filesystem"]
categories = ["filesystem", "api-bindings", "command-line-utilities"]
exclude = [".github", "scripts", "docs", "legacy"]
license = "MIT"

edition = "2024"
[dependencies]
#quick-xml = { version = "0.38.0", features = ["serde","serialize"] }
md5 = "0.7.0"
sha1 = "0.10.0"
sha2 = "0.10"
#log = "0.4"
#env_logger = "0.10"
dav-server = { version = "0.8.0", features = ["hyper", "all"] }
tokio = { version = "1.45.1", features = ["full"] }
futures-util = "0.3.31"
clap = { version = "4.5.40", features = ["derive", "env", "wrap_help"] }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls","stream"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7"
#reqwest-tracing = "0.5.7"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
tracing = "0.1.41"
#time = "0.3.41"
bytes = "1.10.1"
moka = { version = "0.12.10", features = ["future"] }
dashmap = "7.0.0-rc2"
#zip = "4.0.0"
url = "2.5.4"
#path-slash = "0.2.1"
headers = "0.4.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
#http = "0.2.10"
hyper-util = { version = "0.1.14", features = ["server", "tokio"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
#tls-listener = { version = "0.11.0", features = ["hyper-h1", "hyper-h2", "rt"], optional = true }
#tokio-rustls = { version = "0.26.2", optional = true }
#actix-rt = "2.2.0"
#background-jobs = "0.19.0"

chrono = { version = "0.4", features = ["alloc"] }


tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
# signal-hook = {version = "0.3.18", features = ["default"]}
# signal-hook-tokio = "0.3.1"
#openssl-probe = {version = "0.1.6", optional = true}
#openssl = { version = "0.10.73", features = ["vendored"] }
#dirs = "6.0.0"
serde_json = "1.0.140"
#atty = "0.2.14"
#self_update = "0.42.0"
#tempfile = "3.20.0"
base64 = "0.22.1"
hex = "0.4"
htmlescape = "0.3.1"
num_cpus = "1.17.0"
percent-encoding = "2.3.2"

# --- QuarkDrive 单一 .app 新增依赖（docs/rust-migration.md §5）---
rusqlite = { version = "0.32", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
tray-icon = "0.21"
tempfile = "3"
rand = "0.8"
# ---------------------------------------------------------------------

# Unix signal support
[target.'cfg(unix)'.dependencies]
signal-hook = {version = "0.3.18", features = ["default"]}
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }

# macOS 专用:Keychain + tray 菜单栏
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
objc = "0.2"
core-foundation = "0.10"

[profile.release]
lto = "thin"

[package.metadata.deb]
maintainer = "hawkyin-hub maintainers"
copyright = "2025-present, hawkyin-hub maintainers"
license = "MIT"
extended-description = """\
WebDAV server for QuarkDrive"""
section = "utility"
priority = "optional"
assets = [
    ["target/release/quarkdrive-webdav", "usr/bin/", "755"],
    ["systemd.service", "etc/systemd/system/quarkdrive-webdav.service", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/quarkdrive-webdav", dest = "/usr/bin/quarkdrive-webdav", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/quarkdrive-webdav/LICENSE", doc = true, mode = "0644" },
    { source = "systemd.service", dest = "/etc/systemd/system/quarkdrive-webdav.service", config = true, mode = "0644" },
]
